--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ PyYAML==6.0
 pyzmq==25.1.0
 requests==2.31.0
 requests-oauthlib==1.3.1
+schedule==1.2.0
 scholarly==1.7.11
 selenium==4.9.1
 six==1.16.0
